--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,60 +1,6 @@
 {{notification-container position="top-right"}}
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-lg-12">
-      <form {{action 'Request' on="submit"}}>
-        <div class="form-group">
-          <label for="account">Enter Github account:</label>
-          {{input value=account id="account" name="account" class="form-control"}}
-        </div>  
-        <button type="submit" class="btn btn-success">Get repositories</button>
-      </form>
-    </div>
-  </div>
-  <br>
+ {{search-repo model=model invalidateModel="invalidateModel"}}
 
-
-  <div class="row">
-    <div class="col-xs-12 col-lg-12">
-      Filter:
-      <button {{action "Filter" 'repo'}}>All</button>
-      {{#each model.languages as |lng|}}
-        {{#if lng}}
-          <button {{action "Filter" lng}}>{{lng}}</button>
-        {{/if}}
-      {{/each}}
-    </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-xs-12 col-lg-12">
-      <div class="list-group" role="tablist">
-        {{#each model.repos as |repo|}}
-          <a data-toggle="collapse" href="#branch_{{repo.id}}"  class="repo  {{repo.language}} list-group-item list-group-item-action flex-column align-items-start" role="button" aria-expanded="false" aria-controls="branch_{{repo.id}}">
-            <div class="d-flex w-100 justify-content-between">
-               <h5 class="mb-1">{{repo.name}}<small>    {{repo.private}}</small></h5>
-               <small> <span class="badge badge-primary badge-pill">{{repo.branches.length}}</span>           branches</small>
-            </div>
-            <p class="small mb-1"><a href={{repo.htmlUrl}}>{{repo.htmlUrl}}</a></p>
-            <small>    {{repo.language}}</small>
-          </a>
-          <div class="collapse" id="branch_{{repo.id}}">
-            <div class="card card-body">
-              {{#each repo.branches as |branch|}}
-                <small>{{branch.name}}</small>      
-              {{/each}}
-            </div>
-          </div>
-        {{else}}
-           <br>
-           <div class="card card-body">
-	     <p>Sorry, we didn't find repositories</p>
-	   </div>
-        {{/each}}
-      </div>
-    </div>
-  </div>
 </div>
-
 {{yield}}
