--- a/app/templates/components/repo-details.hbs
+++ b/app/templates/components/repo-details.hbs
@@ -2,7 +2,7 @@
   <div class="col-xs-12 col-lg-12">
     Filter:
     <button {{action "Filter" 'repo'}}>All</button>
-    {{#each usuarios.languages as |lng|}}
+    {{#each user.languages as |lng|}}
       {{#if lng}}
         <button {{action "Filter" lng}}>{{lng}}</button>
       {{/if}}
